# sapce_3d

./: .gitignore  .gitmodules  CMakeLists.txt  setup.sh
src/: camera.cpp  elements.cpp  elements.h  global_var.cpp  global_var.h  main.cpp  main1.cpp  model_obj.h  notes.txt  objects.cpp  objects.h  person.cpp  person.h  physics.cpp  physics.h  player.cpp  player.h  video_player.cpp  video_player.h
src/3dObjects/: Models.cpp  Models.h  elements.cpp  elements.h  model_obj.cpp  model_obj.h  objects.cpp
src/Controls/: Controller.cpp  Controller.h  camera.cpp  camera.h  controls.cpp  controls.h
src/ETC/: global_var.cpp  global_var.h
src/NPC/: person.cpp
src/assets/Models/car/: burnin_rubber_3_viral.glb
src/assets/Models/chair/: object_chair.gltf
src/assets/Models/housemodel/2/: untitled.glb
src/assets/Models/housemodel/joint/: untitled.glb
src/assets/Models/player/: animation_list.txt  player.gltf
src/assets/Models/spider/: license.txt  scene.gltf
src/assets/Models/terrain/: terrain.gltf
src/level/level1/: level.cpp  level.h
src/level/player/: player.cpp  player.h
src/menu/: menu.cpp  menu.h
src/related/: file.cpp  file.h
src/script/: config.lua  script.cpp  script.h
src/video_player/: VideoPlayer.cpp  VideoPlayer.h  compile.sh  main.cpp.later  video_player
